--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 /*
-  ---break---
+	---break---
 */
 @custom-variant dark (&:is(.dark *));
 
@@ -11,14 +11,15 @@
 }
 
 /*
-  The default border color has changed to `currentcolor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
+	The default border color has changed to `currentcolor` in Tailwind CSS v4,
+	so we've added these compatibility styles to make sure everything still
+	looks the same as it did with Tailwind CSS v3.
 
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
+	If we ever want to remove these styles, we need to add an explicit border
+	color utility to any element that depends on these defaults.
 */
 @layer base {
+
 	*,
 	::after,
 	::before,
@@ -27,8 +28,9 @@
 		border-color: var(--color-gray-200, currentcolor);
 	}
 }
+
 /*
-  ---break---
+	---break---
 */
 @theme inline {
 	--radius-sm: calc(var(--radius) - 4px);
@@ -67,6 +69,7 @@
 	--color-sidebar-border: var(--sidebar-border);
 	--color-sidebar-ring: var(--sidebar-ring);
 }
+
 /*
   ---break---
 */
@@ -104,11 +107,13 @@
 	--sidebar-border: oklch(0.92 0.004 286.32);
 	--sidebar-ring: oklch(0.705 0.015 286.067);
 }
+
 /*
   ---break---
 */
 .dark {
-	--background: oklch(0.1408 0.0044 285.82); /* #09090b */
+	--background: oklch(0.1408 0.0044 285.82);
+	/* #09090b */
 	--foreground: oklch(0.985 0 0);
 	--card: oklch(0.21 0.006 285.885);
 	--card-foreground: oklch(0.985 0 0);
@@ -116,7 +121,8 @@
 	--popover-foreground: oklch(0.985 0 0);
 	--primary: oklch(0.92 0.004 286.32);
 	--primary-foreground: oklch(0.21 0.006 285.885);
-	--secondary: oklch(0.2103 0.0059 285.89); /* #18181b */
+	--secondary: oklch(0.2103 0.0059 285.89);
+	/* #18181b */
 	--secondary-foreground: oklch(0.985 0 0);
 	--muted: oklch(0.274 0.006 286.033);
 	--muted-foreground: oklch(0.705 0.015 286.067);
@@ -140,6 +146,7 @@
 	--sidebar-border: oklch(1 0 0 / 10%);
 	--sidebar-ring: oklch(0.552 0.016 285.938);
 }
+
 /*
   ---break---
 */
@@ -147,6 +154,7 @@
 	* {
 		@apply border-border outline-ring/50;
 	}
+
 	body {
 		@apply bg-background text-foreground;
 	}
