--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -163,6 +163,10 @@
 	.auth-layout {
 		@apply flex items-center justify-center mx-auto max-w-7xl min-h-screen max-sm:px-4 max-sm:py-8;
 	}
+
+	.root-layout {
+		@apply flex mx-auto max-w-7xl flex-col gap-12 my-12 max-lg:px-5 max-sm:px-4 max-sm:my-8;
+	}
 }
 
 @utility content-center {
