--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,7 @@
 	color utility to any element that depends on these defaults.
 */
 @layer base {
+
 	*,
 	::after,
 	::before,
@@ -174,6 +175,10 @@
 
 	.tech-tooltip {
 		@apply absolute bottom-full mb-1 hidden group-hover:flex px-2 py-1 text-xs text-white rounded-md bg-gray-800
+	}
+
+	.animate-speak {
+		@apply absolute inline-flex size-5/6 animate-ping rounded-full bg-primary opacity-30;
 	}
 }
 
